--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
             padding: 0;
             font-family: 'Poppins', sans-serif;
           }
+
           .ft-bold li a{
               font-weight: 900;
           }
@@ -162,16 +163,16 @@
             <img src="./assets/New Project.jpg" class="w-full object-cover h-auto">
             <div class="absolute text-center top-[800px] left-40">
 
-                <P class="text-white text-2xl font-bold underline-offset-1">19 APR 2022,7:30 PM IST</P>
+                <P class="text-white text-2xl font-bold underline-offset-1">20 APR 2022,7:30 PM IST</P>
                 <div class="flex mt-10 space-x-5">
                     <div class="flex items-center">
-                    <p class="text-right text-4xl font-bold text-white pr-2">Lucknow Super<br> Giants</p>
-                    <img src="./assets/lgs.png" alt="gt" class="h-52 ">
+                    <p class="text-right text-4xl font-bold uppercase text-white pr-2">delhi captials</p>
+                    <img src="./assets/DC-Logo-PNG-0idig.png" alt="gt" class="h-52 ">
                 </div>
                 <p class="text-5xl bg-blue-900 h-fit px-3 py-7 text-white font-bold rounded-full">V/S</p>
                 <div class="flex items-center">
-                    <img src="./assets/rrb.png" alt="" class="h-52">
-                    <p class="text-left text-4xl font-bold text-white pl-2">Royal Challengers<br>Bangalore</p>
+                    <img src="./assets/pbks.png" alt="" class="h-52">
+                    <p class="text-left text-4xl font-bold uppercase text-white pl-2">punjab kings</p>
                 </div>
                 </div>
 
@@ -208,12 +209,116 @@
 </div>
 
           </div>
-
-
-       
         <!-- match -->
+<!-- app -->
+<div class="flex mt-10 px-20 items-center">
+<div>
+    <p class="text-5xl font-bold text-orange-600">Get the official IPL APP!</p>
+    <p class="pr-5 text-gray-700">Get the latest scores on the go. Find the latest content, including match highlights, press conferences and recap all at your fingertips by downloading the official IPL app. Available on both Google Play and Apple Store. Download it here!</p>
+    <div class="flex items-center space-x-5 ml-60 mt-5">
+        <img src="./assets/ps.png" alt="playstore" class="h-10 rounded-md">
+        <img src="./assets/as.png" alt="playstore" class="h-10 rounded-md">
+        <img src="./assets/qr.png" alt="playstore" class="h-16 ">
+    </div>
+</div>
+<div>
 
-
+    <img src="./assets/mokeups.jpg" alt="mockups" class="">
+</div>
+</div>
+<!-- app -->
+<!-- leading -->
+<div>
+    <p class="px-5 text-3xl font-bold text-orange-600 mt-10">2022 Leaders</p>
+    <div class="grid grid-cols-1 md:grid-cols-3 lg:grid-cols-6  gap-6 px-5 mt-5">
+        <!-- 1 -->
+        <div class="h-auto group ">
+            <div class="bg-gradient-to-bl from-orange-500 to-yellow-300 rounded-t-xl">
+                <img src="./assets/rr.png" class=" h-8 absolute left-48 mt-2">
+                <img src="./assets/jb.png" class="h-40 mx-auto transform  transition duration-500 group-hover:scale-105">
+                <p class=" w-full bg-orange-800 text-center text-sm text-white">Aramco Orange Cap</p>
+            </div>
+            <div class="text-center pt-3 border border-gray-300 rounded-b-xl ">
+                <p class="text-xl font-bold text-black">Jos Buttler</p>
+                <p id="scores" class="text-3xl font-bold">375</p>
+                <p>RUNS</p>
+                <p class="text-sm mt-10">View full list</p>
+            </div>
+        </div>
+<!-- 2 -->
+        <div class="h-auto group ">
+            <div class="bg-gradient-to-t from-purple-200 via-purple-400 to-purple-800 rounded-t-xl">
+                <img src="./assets/rr.png" class=" h-8 absolute left-[29%] mt-2">
+                <img src="./assets/chahal.png" class="h-40 mx-auto transform  transition duration-500 group-hover:scale-105">
+                <p class=" w-full bg-purple-800 text-center text-sm text-white">Aramco Purple Cap</p>
+            </div>
+            <div class="text-center pt-3 border border-gray-300 rounded-b-xl ">
+                <p class="text-xl font-bold text-black">Yuzvendra Chahal</p>
+                <p id="scores" class="text-3xl font-bold">17</p>
+                <p>WICKETS</p>
+                <p class="text-sm mt-10">View full list</p>
+            </div>
+        </div>
+<!-- 3 -->
+        <div class="h-auto group ">
+            <div class="bg-gradient-to-t from-sky-400 to-indigo-900 rounded-t-xl">
+                <img src="./assets/lgs.png" class=" h-8 absolute left-[46%] mt-2">
+                <img src="./assets/kl.png" class="h-40 mx-auto transform  transition duration-500 group-hover:scale-105">
+                <p class=" w-full bg-blue-800 text-center text-sm text-white">Highest Score</p>
+            </div>
+            <div class="text-center pt-3 border border-gray-300 rounded-b-xl ">
+                <p class="text-xl font-bold text-black">K L Rahul</p>
+                <p id="scores" class="text-3xl font-bold">103</p>
+                <p>SCORES</p>
+                <p class="text-sm mt-10">View full list</p>
+            </div>
+        </div>
+<!-- 4 -->
+        <div class="h-auto group ">
+            <div class="bg-gradient-to-t from-amber-200 via-violet-600 to-sky-900 rounded-t-xl">
+                <img src="./assets/rr.png" class=" h-8 absolute left-[62%] ml-1 mt-2">
+                <img src="./assets/chahal.png" class="h-40 mx-auto transform  transition duration-500 group-hover:scale-105">
+                <p class=" w-full bg-indigo-800 text-center text-sm text-white">Best Bowling Figures</p>
+            </div>
+            <div class="text-center pt-3 border border-gray-300 rounded-b-xl ">
+                <p class="text-xl font-bold text-black">Yuzvendra Chahal</p>
+                <p id="scores" class="text-3xl font-bold">5/40</p>
+                <p>RUNS</p>
+                <p class="text-sm mt-10">View full list</p>
+            </div>
+        </div>
+<!-- 5 -->
+        <div class="h-auto group ">
+            <div class="bg-gradient-to-r from-red-500 to-red-800 rounded-t-xl">
+                <img src="./assets/rr.png" class=" h-8 absolute left-[79%] mt-2">
+                <img src="./assets/jb.png" class="h-40 mx-auto transform  transition duration-500 group-hover:scale-105">
+                <p class=" w-full bg-red-800 text-center text-sm text-white">Upstox Most Valuable Player</p>
+            </div>
+            <div class="text-center pt-3 border border-gray-300 rounded-b-xl ">
+                <p class="text-xl font-bold text-black">Jos Buttler</p>
+                <p id="scores" class="text-3xl font-bold">168.0</p>
+                <p>PTS</p>
+                <p class="text-sm mt-10">View full list</p>
+            </div>
+        </div>
+<!-- 6 -->
+        <div class="h-auto group ">
+            <div class="bg-gradient-to-b from-blue-400 to-emerald-400 rounded-t-xl">
+                <img src="./assets/mi.png" class=" h-8 absolute left-[95%] ml-1 mt-2">
+                <img src="./assets/rohits.png" class="h-40 mx-auto transform  transition duration-500 group-hover:scale-105">
+                <p class=" w-full bg-green-800 text-center text-sm text-white">Paytm Fairplay</p>
+            </div>
+            <div class="text-center pt-3 border border-gray-300 rounded-b-xl ">
+                <p class="text-xl font-bold text-black">Jos Buttler</p>
+                <p id="scores" class="text-3xl font-bold">375</p>
+                <p>RUNS</p>
+                <p class="text-sm mt-10">View full list</p>
+            </div>
+        </div>
+  
+    </div>
+</div>
+<!-- leading -->
 
 
 
@@ -226,7 +331,7 @@
 
 var live = document.getElementById('live')
 
-var dest = new Date("apr 19, 2022 20:30:00").getTime();
+var dest = new Date("apr 20, 2022 19:30:00").getTime();
 var x = setInterval(() => {
     var now = new Date().getTime();
     var diff = dest - now;
@@ -242,7 +347,12 @@ document.getElementById('sec').innerHTML=seconds;
 
 if ((days==0 && hours==0)&&(minutes==0 && seconds==0)){
 
-    live.classList.remove('hidden')
+live.classList.remove('hidden')
+document.getElementById('day').clearTimeout()
+document.getElementById('hrs').clearTimeout()
+document.getElementById('min').clearTimeout()
+document.getElementById('sec').clearTimeout()
+
 
 }
 
