--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
 <!-- sponsers -->
 <!-- footer -->
 <div class="bg-gradient-to-b from-sky-500 to-blue-900">
-<img src="./assets/ipl-logo-new-old.png" class="absolute h-40   mt-[1000px] md:mt-[300px] right-10">
+<img src="./assets/ipl-logo-new-old.png" class="absolute    mt-[1000px] md:mt-[300px] right-10">
 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 px-10 mx-auto p-10 pb-40 text-gray-200">
 
 <div class="mt-5"> 
