--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>
         <div class="">
 
-            <ul class="hidden md:flex space-x-10  text-xl ft-bold">
+            <ul class="invisible md:visible flex space-x-10  text-xl ft-bold">
                 <li><a href=""><span class="link link-underline link-underline-black text-black"> MATCHES</span></a></li>
                 <li><a href=""><span class="link link-underline link-underline-black text-black"> VIDEOS</span></a></li>
                 <li><a href=""><span class="link link-underline link-underline-black text-black"> STATS</span></a></li>
@@ -161,7 +161,7 @@
         <!-- match -->
         <div>
             <img src="./assets/New Project.jpg" class="w-full object-cover h-96 md:h-auto">
-            <div class="absolute text-center top-[1000px] md:top-[800px] md:left-40">
+            <div class="absolute text-center top-[850px] md:top-[800px] md:left-40">
 
                 <P class="text-white text-2xl font-bold underline-offset-1">20 APR 2022,7:30 PM IST</P>
                 <div class="flex mt-10 px-5 space-x-5">
