--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         <!-- match -->
         <div>
             <img src="./assets/New Project.jpg" class="w-full object-cover h-96 md:h-auto">
-            <div class="absolute text-center top-[850px] md:top-[800px] md:left-40">
+            <div class="absolute text-center mx-auto top-[900px] md:top-[800px] md:left-40">
 
                 <P class="text-white text-2xl font-bold underline-offset-1">20 APR 2022,7:30 PM IST</P>
                 <div class="flex mt-10 px-5 space-x-5">
@@ -176,7 +176,7 @@
                 </div>
                 </div>
 
-<div class="absolute flex text-white ml-8 md:space-x-2 mt-5  md:ml-72  items-center">
+<div class="absolute flex text-white ml-3 md:space-x-2 mt-5  md:ml-72  items-center">
     <div class=" items-center px-10 py-5">
         <p id="day" class="text-xl md:text-5xl">1</p>
         <p>DAY</p>
@@ -211,7 +211,7 @@
           </div>
         <!-- match -->
 <!-- app -->
-<div class="md:flex mt-10 px-20 items-center">
+<div class="md:flex pl-5 mt-10 md:px-20 items-center">
 <div>
     <p class="text-5xl font-bold text-orange-600">Get the official IPL APP!</p>
     <p class="pr-5 text-gray-700">Get the latest scores on the go. Find the latest content, including match highlights, press conferences and recap all at your fingertips by downloading the official IPL app. Available on both Google Play and Apple Store. Download it here!</p>
