--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div class="md:flex"> 
             <div class=" h-auto md:w-3/4 ">
                 <video src="./assets/highlights.mp4" autoplay controls muted></video>
-                <p class="absolute top-20 text-5xl bg-red-500 px-6 py-2 text-white font-extrabold">HIGHLIGHTS</p>
+                <p class="absolute top-20 text-xl md:text-5xl bg-red-500 px-6 py-2 text-white font-extrabold">HIGHLIGHTS</p>
             </div>
             <div class=" w-full md:w-1/4 bg-gray-200">
                 <div class="px-10">
