--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>
         <div class="">
 
-            <ul class="invisible md:visible flex space-x-10  text-xl ft-bold">
+            <ul id="navbar" class=" hidden flex space-x-10  text-xl ft-bold">
                 <li><a href=""><span class="link link-underline link-underline-black text-black"> MATCHES</span></a></li>
                 <li><a href=""><span class="link link-underline link-underline-black text-black"> VIDEOS</span></a></li>
                 <li><a href=""><span class="link link-underline link-underline-black text-black"> STATS</span></a></li>
@@ -467,8 +467,6 @@ document.getElementById('sec').clearTimeout()
 }
 
 },1000 );
-
-
 const d =new Date()
 
 </script>
