--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         <!-- match -->
         <div>
             <img src="./assets/New Project.jpg" class="w-full object-cover h-96 md:h-auto">
-            <div class="absolute text-center mx-auto top-[900px] md:top-[800px] md:left-40">
+            <div class="absolute text-center mx-auto top-[920px] md:top-[800px] md:left-40">
 
                 <P class="text-white text-2xl font-bold underline-offset-1">20 APR 2022,7:30 PM IST</P>
                 <div class="flex mt-10 px-5 space-x-5">
@@ -176,29 +176,29 @@
                 </div>
                 </div>
 
-<div class="absolute flex text-white ml-3 md:space-x-2 mt-5  md:ml-72  items-center">
-    <div class=" items-center px-10 py-5">
-        <p id="day" class="text-xl md:text-5xl">1</p>
+<div class="absolute flex text-white md:space-x-2 mt-5 ml-44  md:ml-72  items-center">
+    <div class=" items-center px-2 md:px-10 py-5">
+        <p id="day" class="text-xl  md:text-5xl">1</p>
         <p>DAY</p>
     </div>
     <p class="text-xl md:text-5xl">:</p>
-    <div class=" items-center px-10 py-5">
+    <div class=" items-center px-2 md:px-10 py-5">
         <p id="hrs" class="text-xl md:text-5xl">1</p>
         <p>HRS</p>
     </div>
     <p class="text-xl md:text-5xl">:</p>
-    <div class=" items-center px-10 py-5">
+    <div class=" items-center px-2 md:px-10 py-5">
         <p id="min" class="text-xl md:text-5xl">1</p>
         <p>MIN</p>
     </div>
     <p class="text-xl md:text-5xl">:</p>
-    <div class=" items-center px-10 py-5">
+    <div class=" items-center px-2 px-2 md:px-10 py-5">
         <p id="sec" class="text-xl md:text-5xl">1</p>
         <p>SEC</p>
     </div>
  </div>
 
-<div id="live"  class="flex hidden mx-auto md:ml-[445px] px-4 py-3 bg-black w-24 rounded-full bg-opacity-75">
+<div id="live"  class="flex  mx-auto md:ml-[445px] px-4 py-3 bg-black w-24 rounded-full bg-opacity-75">
 <span class="animate-ping absolute inline-flex h-3 w-3 rounded-full bg-red-500 opacity-75"></span>
     <span class="relative flex items-center inline-flex rounded-full h-3 w-3 bg-red-600"><p class="text-xl ml-5 font-semibold text-white">Live</p></span>
 </div>
