--- a/index.html
+++ b/index.html
@@ -163,23 +163,21 @@
             <img src="./assets/New Project.jpg" class="w-full object-cover h-96 md:h-auto">
             <div class="absolute text-center mx-auto top-[920px] md:top-[800px] md:left-40">
 
-               
                 <P class="text-white text-2xl font-bold underline-offset-1">20 APR 2022,7:30 PM IST</P>
-               
-                <div class="flex mt-10 ml-10 space-x-5">
+                <div class="flex mt-10 px-5 space-x-5">
                     <div class="flex items-center">
-                    <p class="text-right md:text-4xl font-bold uppercase text-white pr-2">delhi<br> captials</p>
+                    <p class="text-right md:text-4xl font-bold uppercase text-white pr-2">delhi captials</p>
                     <img src="./assets/DC-Logo-PNG-0idig.png" alt="gt" class="h-24 md:h-52 ">
                 </div>
                 <p class=" md:text-5xl bg-blue-900 h-fit px-3 left- py-3 md:py-7 text-white font-bold rounded-full">V/S</p>
                 <div class="flex items-center">
                     <img src="./assets/pbks.png" alt="" class="h-24 md:h-52">
-                    <p class="text-left md:text-4xl font-bold uppercase text-white pl-2">punjab <br> kings</p>
+                    <p class="text-left md:text-4xl font-bold uppercase text-white pl-2">punjab kings</p>
                 </div>
                 </div>
 
-<div class="absolute flex text-white md:space-x-2 mt-5 ml-20  md:ml-72  items-center">
-    <div class=" items-center px-2 md:px-10 py-5">
+<div class="absolute flex text-white md:space-x-2 mt-5  md:ml-72  items-center">
+    <div class=" items-center px-2  md:px-10 py-5">
         <p id="day" class="text-xl  md:text-5xl">1</p>
         <p>DAY</p>
     </div>
@@ -194,13 +192,13 @@
         <p>MIN</p>
     </div>
     <p class="text-xl md:text-5xl">:</p>
-    <div class=" items-center px-2 px-2 md:px-10 py-5">
+    <div class=" items-center px-2 md:px-10 py-5">
         <p id="sec" class="text-xl md:text-5xl">1</p>
         <p>SEC</p>
     </div>
  </div>
 
-<div id="live"  class="flex  mx-auto md:ml-[445px] px-4 py-3 bg-black w-24 rounded-full bg-opacity-75">
+<div id="live"  class="flex hidden mx-auto md:ml-[445px] px-4 py-3 bg-black w-24 rounded-full bg-opacity-75">
 <span class="animate-ping absolute inline-flex h-3 w-3 rounded-full bg-red-500 opacity-75"></span>
     <span class="relative flex items-center inline-flex rounded-full h-3 w-3 bg-red-600"><p class="text-xl ml-5 font-semibold text-white">Live</p></span>
 </div>
