--- a/index.html
+++ b/index.html
@@ -169,14 +169,14 @@
                     <p class="text-right md:text-4xl font-bold uppercase text-white pr-2">delhi captials</p>
                     <img src="./assets/DC-Logo-PNG-0idig.png" alt="gt" class="h-24 md:h-52 ">
                 </div>
-                <p class=" md:text-5xl bg-blue-900 h-fit px-3 left- py-3 md:py-7 text-white font-bold rounded-full">V/S</p>
+                <p class=" md:text-5xl bg-blue-900 h-fit px-3 mx-auto py-3 md:py-7 text-white font-bold rounded-full">V/S</p>
                 <div class="flex items-center">
                     <img src="./assets/pbks.png" alt="" class="h-24 md:h-52">
                     <p class="text-left md:text-4xl font-bold uppercase text-white pl-2">punjab kings</p>
                 </div>
                 </div>
 
-<div class="absolute flex text-white md:space-x-2 mt-5  md:ml-72  items-center">
+<div class="absolute flex ml-[30%] text-white md:space-x-2 mt-5  md:ml-72  items-center">
     <div class=" items-center px-2  md:px-10 py-5">
         <p id="day" class="text-xl  md:text-5xl">1</p>
         <p>DAY</p>
