--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <div class="absolute text-center mx-auto top-[920px] md:top-[800px] md:left-40">
 
                 <P class="text-white text-2xl font-bold underline-offset-1">20 APR 2022,7:30 PM IST</P>
-                <div class="flex mt-10 px-5 space-x-5">
+                <div class="flex mt-10 space-x-5">
                     <div class="flex items-center">
                     <p class="text-right md:text-4xl font-bold uppercase text-white pr-2">delhi captials</p>
                     <img src="./assets/DC-Logo-PNG-0idig.png" alt="gt" class="h-24 md:h-52 ">
