--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
         <div>
             <img src="./assets/ipl-logo.png" alt="logo"class="h-16" >
         </div>
-        <div class="">
+        <div  id="navbar">
 
-            <ul id="navbar" class=" hidden flex space-x-10  text-xl ft-bold">
+            <ul class="invisible md:visible flex w-0 md:w-auto space-x-10  text-xl ft-bold">
                 <li><a href=""><span class="link link-underline link-underline-black text-black"> MATCHES</span></a></li>
                 <li><a href=""><span class="link link-underline link-underline-black text-black"> VIDEOS</span></a></li>
                 <li><a href=""><span class="link link-underline link-underline-black text-black"> STATS</span></a></li>
@@ -163,20 +163,20 @@
             <img src="./assets/New Project.jpg" class="w-full object-cover h-96 md:h-auto">
             <div class="absolute text-center mx-auto top-[920px] md:top-[800px] md:left-40">
 
-                <P class="text-white text-2xl font-bold underline-offset-1">20 APR 2022,7:30 PM IST</P>
+                <P class="text-white text-2xl font-bold underline-offset-1">21 APR 2022,7:30 PM IST</P>
                 <div class="flex mt-10 space-x-5">
                     <div class="flex items-center">
-                    <p class="text-right md:text-4xl font-bold uppercase text-white md:pr-2">delhi captials</p>
-                    <img src="./assets/DC-Logo-PNG-0idig.png" alt="gt" class="h-24 md:h-52 ">
+                    <p class="text-right md:text-4xl font-bold uppercase text-white md:pr-2">Mumbai Indian</p>
+                    <img src="./assets/mi.png" alt="gt" class="h-24 md:h-52 ">
                 </div>
                 <p class=" md:text-5xl ml-5 md:ml-0 bg-blue-900 h-fit px-3 mx-auto py-3 md:py-7 text-white font-bold rounded-full">V/S</p>
                 <div class="flex items-center">
-                    <img src="./assets/pbks.png" alt="" class="h-24 md:h-52">
-                    <p class="text-left md:text-4xl font-bold uppercase text-white md:pl-2">punjab kings</p>
+                    <img src="./assets/csk.png" alt="" class="h-24 md:h-52">
+                    <p class="text-left md:text-4xl font-bold uppercase text-white md:pl-2">chennai super king</p>
                 </div>
                 </div>
 
-<div class="absolute flex ml-[30%] text-white md:space-x-2 mt-5  md:ml-72  items-center">
+<div class="absolute flex ml-[30%] text-white md:space-x-2 mt-5  md:ml-[20%]  items-center">
     <div class=" items-center px-2  md:px-10 py-5">
         <p id="day" class="text-xl  md:text-5xl">1</p>
         <p>DAY</p>
@@ -441,7 +441,7 @@
 
 var live = document.getElementById('live')
 
-var dest = new Date("apr 20, 2022 19:30:00").getTime();
+var dest = new Date("apr 21, 2022 19:30:00").getTime();
 var x = setInterval(() => {
     var now = new Date().getTime();
     var diff = dest - now;
@@ -468,6 +468,15 @@ document.getElementById('sec').clearTimeout()
 
 },1000 );
 const d =new Date()
+var navbar=document.getElementById('navbar')
+// if (screen.width > 425) {
+//     navbar.classList.add('hidden')
+// }
+// else {
+
+//     navbar.classList.remove('hidden')
+// }
+
 
 </script>
 
