--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
     <nav class="w-full h-auto  px-5 py-2 shadow-lg">
         <div class="flex items-center justify-between">
         <div>
-            <img src="./assets/ipl-logo.png" alt="logo"class="h-16" >
+            <img src="./assets/ipl-logo.png" alt="logo"class="h-16 w-" >
         </div>
         <div  id="navbar">
 
-            <ul class="invisible md:visible flex w-0 md:w-auto space-x-10  text-xl ft-bold">
+            <ul class="invisible lg:visible flex  w-0 md:w-auto space-x-10  text-xl ft-bold">
                 <li><a href=""><span class="link link-underline link-underline-black text-black"> MATCHES</span></a></li>
                 <li><a href=""><span class="link link-underline link-underline-black text-black"> VIDEOS</span></a></li>
                 <li><a href=""><span class="link link-underline link-underline-black text-black"> STATS</span></a></li>
