--- a/index.html
+++ b/index.html
@@ -166,13 +166,13 @@
                 <P class="text-white text-2xl font-bold underline-offset-1">21 APR 2022,7:30 PM IST</P>
                 <div class="flex mt-10 space-x-5">
                     <div class="flex items-center">
-                    <p class="text-right md:text-4xl font-bold uppercase text-white md:pr-2">Mumbai Indian</p>
-                    <img src="./assets/mi.png" alt="gt" class="h-24 md:h-52 ">
+                    <p class="text-right md:text-4xl font-bold uppercase text-white md:pr-2">delhi Capitals</p>
+                    <img src="./assets/DC-Logo-PNG-0idig.png" alt="gt" class="h-16 md:h-52 ">
                 </div>
                 <p class=" md:text-5xl ml-5 md:ml-0 bg-blue-900 h-fit px-3 mx-auto py-3 md:py-7 text-white font-bold rounded-full">V/S</p>
                 <div class="flex items-center">
-                    <img src="./assets/csk.png" alt="" class="h-24 md:h-52">
-                    <p class="text-left md:text-4xl font-bold uppercase text-white md:pl-2">chennai super king</p>
+                    <img src="./assets/rr.png" alt="" class="h-16 md:h-52">
+                    <p class="text-left md:text-4xl font-bold uppercase text-white md:pl-2">Rajasthan Royals</p>
                 </div>
                 </div>
 
@@ -441,7 +441,7 @@
 
 var live = document.getElementById('live')
 
-var dest = new Date("apr 21, 2022 19:30:00").getTime();
+var dest = new Date("apr 22, 2022 19:30:00").getTime();
 var x = setInterval(() => {
     var now = new Date().getTime();
     var diff = dest - now;
